--- a/style.css
+++ b/style.css
@@ -112,3 +112,31 @@ button:hover {
   opacity: 0;
   transition: opacity 0.5s ease;
 }
+
+/* Historique */
+#history {
+  margin-top: 10px;
+  width: 90%;
+  background-color: #2b2b44; /* Violet plus foncé pour encadrer les résultats */
+  padding: 10px;
+  border-radius: 5px;
+}
+
+#history h2 {
+  font-size: 16px;
+  color: #caaaff; /* Violet pastel lumineux */
+  margin-bottom: 10px;
+}
+
+#history-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#history-list li {
+  font-size: 14px;
+  color: #ffffff; /* Texte blanc */
+  margin-bottom: 5px;
+  word-wrap: break-word;
+}
